[package]
name = "vgtk_components"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vgtk_components"
path = "src/lib.rs"

[[bin]]
name = "models"
path = "src/bin.rs"

[dependencies]
chrono = { version = "0.4" }
lazy_static = "1.4"
pango = "0.9"
pretty_env_logger = "0.4"
vgtk = { git = "https://github.com/bodil/vgtk" }
